--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
   </head>
 
   <body>
-    <div class="container"><header class="page-header">
-      тел. +7 (921) 328-91-27
+    <header class="page-header">
+<div class="container">
+     <a class="header-phone" href="tel:+79213289127">тел. +7 (921) 328-91-27</a>
+<a class="header-email" href="mailto:79213289127@ya.ru">79213289127@ya.ru</a>
     </header>
 </div>
     <div class="container"><section class="hero-image">
-      <h1 class="heading">Опознанный Енот</h1>
+      <h1 class="heading">Неопознанный Енот</h1>
 <div class="container">     
 <p>Junior верстальщик</p>
     </section>
 </div>
     <section class="intro">
+<figure class="user-image">
+  <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+</figure>
       <div class="container"><h2 class="subheading">Давайте познакомимся</h2></div>
       <div class="container"><h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
@@ -30,15 +35,21 @@
       <h2 class="subheading">Мои работы</h2></div>
 <div class="container">
       <h3>Магазин товаров для дома</h3>
+<figure class="project-image">
+<img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+</figure>
       <p>Мой первый сайт.</p>
-
+<a class="button" href="source/project/index.html">открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </section>
 </div>
-    <footer class="page-footer">
-      тел. +7 (921) 328-91-27
 
+    <footer class="page-footer">
+<div class="container">
+      <a class="footer-phone" href="tel:+79213289127">тел. +7 (921) 328-91-27</a>
+<a class="footer-email" href="mailto:79213289127@ya.ru">79213289127@ya.ru</a>
+</div>
     </footer>
   </body>
 </html>
