--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@
       <div class="container"><h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
+<div class="skills">
+  <h3>Мои навыки</h3>
+<div class="skills">
+  <h3>Мои навыки</h3>
+  <dl class="skills-list">
+    <dt class="skill-html">HTML</dt>
+    <dd class="level"><div style="width: 60%;">60%</div></dd>
+    <dt class="skill-css">CSS</dt>
+    <dd class="level"><div style="width: 40%;">40%</div></dd>
+  </dl>
+</div>
       <p>Текст о том, чем могу быть полезен.</p>
-    </section></div>
+    </section>
 
     <div class="container"><section class="portfolio">
       <h2 class="subheading">Мои работы</h2></div>
